<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">




    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setDefaultUnit"
        android:layout_marginTop="10sp"

        android:id="@+id/textView2"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_margin="3sp"
        android:background="@android:color/darker_gray"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/km"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/km_checkBox" />


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="3sp"
        android:background="@android:color/darker_gray"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/miles"
        android:textAppearance="?android:attr/textAppearanceMedium"

        android:id="@+id/miles_checkBox" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:text="@string/common_apps"
        android:id="@+id/textView3" />

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_margin="3sp"
        android:background="@android:color/darker_gray"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"

        android:src="@drawable/rsz_waze_icon"
        android:id="@+id/waze_imageButton" />


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="3sp"
        android:background="@android:color/darker_gray"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:background="@android:color/transparent"

        android:layout_height="wrap_content"
        android:src="@drawable/rsz_google_maps_icon"
        android:id="@+id/google_maps_imageButton" />
</LinearLayout>