<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/dialog_tv"
        />




    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/navigate"
        android:background="@android:color/transparent"
        android:id="@+id/navigate_button"
        android:layout_marginRight="10dp"

        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="navigate"
        android:gravity="center"
        android:layout_below="@id/navigate_button"
        android:layout_alignStart="@+id/navigate_button"
        android:layout_alignEnd="@+id/navigate_button"
        android:id="@+id/textView7" />




    <ImageButton
        android:id="@+id/dialogButtonFavourites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="0dp"
        android:background="@drawable/add_to_fav"
        android:text="@string/Favourites_button"
        android:textSize="11sp"
        android:layout_above="@+id/textView7"
        android:layout_toEndOf="@+id/navigate_button" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Favourites"
        android:gravity="center"
        android:layout_below="@+id/navigate_button"
        android:layout_alignEnd="@+id/dialogButtonFavourites"
        android:layout_alignStart="@+id/dialogButtonFavourites"
        />

    <ImageButton
        android:id="@+id/dialogButtonShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Share_button"
        android:padding="0dp"
        android:background="@drawable/share_button"
        android:textSize="11sp"
        android:layout_alignParentTop="true"
        android:layout_toStartOf="@+id/dialogButtonMap" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Share"
        android:gravity="center"
        android:layout_marginBottom="10dp"

        android:layout_below="@+id/dialogButtonShare"
        android:layout_alignStart="@+id/dialogButtonShare"
        android:layout_alignEnd="@+id/dialogButtonShare"
        android:id="@+id/textView9" />
    <ImageButton
        android:id="@+id/dialogButtonMap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/map_button"
        android:layout_marginLeft="15dp"
        android:padding="0dp"

        android:background="@drawable/show_on_map"
        android:textSize="11sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="map"
        android:gravity="center"
        android:layout_below="@+id/dialogButtonMap"
        android:layout_alignStart="@+id/dialogButtonMap"
        android:layout_alignEnd="@+id/dialogButtonMap"
        android:id="@+id/textView8" />

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:id="@+id/progressBarImage"
        android:layout_below="@+id/place_image"
     />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4sp"

        android:layout_below="@id/dialogButtonMap"
        android:id="@+id/distance_from_you_tv"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4sp"

        android:layout_below="@id/distance_from_you_tv"
        android:id="@+id/vicinity_tv"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4sp"

        android:layout_below="@id/vicinity_tv"
        android:id="@+id/types_tv"/>
    <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
        android:layout_margin="4sp"

        android:layout_below="@id/types_tv"
    android:id="@+id/opening_tv"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4sp"
        android:textColor="@android:color/holo_blue_dark"
        android:layout_below="@id/opening_tv"
        android:id="@+id/international_phone_number_tv"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4sp"
        android:textColor="@android:color/holo_blue_dark"
        android:layout_below="@id/international_phone_number_tv"
        android:id="@+id/formatted_phone_number_tv"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4sp"
        android:textColor="@android:color/holo_blue_dark"
        android:layout_below="@id/formatted_phone_number_tv"
        android:id="@+id/website_tv"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4sp"
        android:layout_below="@id/website_tv"
        android:id="@+id/rating_tv"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_margin="4sp"
        android:layout_height="100sp"
        android:id="@+id/place_image"
        android:src="@drawable/default_dialog_image"
        android:layout_below="@+id/rating_tv"
        android:layout_alignParentBottom="true"
         />



</RelativeLayout>